# sword_tools_python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  mypy.ini  setup.cfg  tox.ini
.github/workflows/: tox.yml
src/sword_tools_python/: utils.py
tests/: test_iterate_verses.py
