[metadata]
name = sword_tools_python
url = https://github.com/greg-hellings/sword_tools_python
project_urls =
    Bug Tracker = https://github.com/greg-hellings/sword_tools_python/issues
    Release Management = https://github.com/greg-hellings/sword_tools_python/releases
    CI = https://github.com/greg-hellings/sword_tools_python/actions
    Source Code = https://github.com/greg-hellings/sword_tools_python
description = A collection of random Python utils for SWORD work
long_description = file: README.md
long_description_content_type = text/markdown
author = Greg Hellings
author_email = greg.hellings@gmail.com
maintainer = Greg Hellings
maintainer_email = greg.hellings@gmail.com
license = MIT
; license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
keywords =
    sword

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  Sword
  prettytable

[options.entry_points]
console_scripts =
  dupvss = sword_tools_python.bin.dupvss:dupvss

[options.packages.find]
where = src
